--- a/BookManagement/app/src/main/res/values-night/strings.xml
+++ b/BookManagement/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="SEGEND">-----END-OF-ONE-BOOK-----\n</string>
-</resources>
+<resources></resources>
